# R.Type-TEK3

./: CMakeLists.txt  Doxyfile  README.md  build.sh  config_file
Client/: .clang-tidy  .gitignore  CMakeLists.txt  justfile  main.cpp
Client/AEngine/: AAudioEngine.hpp  AEngine.cpp  AEngine.hpp  AEventEngine.cpp  AEventEngine.hpp  AGraphicsEngine.hpp  ASocket.cpp  ASocket.hpp  AWindowEngine.hpp  CMakeLists.txt
Client/Component/: BlinkComponent.hpp  CMakeLists.txt  ClocksComponent.hpp  CollideComponent.hpp  DataComponent.hpp  DrawableComponent.hpp  ExecComponent.hpp  InputComponent.hpp  KeyboardEventComponent.hpp  MountedComponent.hpp  MouseEventComponent.hpp  SceneManager.hpp  ServerPropertiesComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
Client/Core/: CMakeLists.txt  Core.cpp  Core.hpp
Client/ECS/: Entity.hpp  Registry.hpp  Sparse.hpp  TestComponent.hpp
Client/IEngine/: IAudioEngine.hpp  IGraphicsEngine.hpp  IWindowEngine.hpp
Client/Protocol/: ProtocolBuilder.hpp  ProtocolParser.hpp
Client/SFMLEngine/: CMakeLists.txt  SFMLEngine.cpp  SFMLEngine.hpp  SFMLSocket.cpp  SFMLSocket.hpp
Client/SFMLEngine/Audio/: CMakeLists.txt  SFMLAudioEngine.cpp  SFMLAudioEngine.hpp
Client/SFMLEngine/Event/: CMakeLists.txt  SFMLEventEngine.cpp  SFMLEventEngine.hpp
Client/SFMLEngine/Graphics/: CMakeLists.txt  SFMLGraphicsEngine.cpp  SFMLGraphicsEngine.hpp
Client/SFMLEngine/Window/: CMakeLists.txt  SFMLWindowEngine.cpp  SFMLWindowEngine.hpp
Client/Script/: CMakeLists.txt  Script.hpp  ScriptBlinkComponents.hpp  ScriptClocksComponents.hpp  ScriptCollideComponents.hpp  ScriptDataComponents.hpp  ScriptDrawableComponents.hpp  ScriptEngine.hpp  ScriptRegistry.hpp  ScriptSceneManagerComponents.hpp  ScriptServerPropertiesComponents.hpp  ScriptTransformComponents.hpp  ScriptVelocityComponents.hpp
Client/Scripts/: keyPressed.chai  playsound.chai  sceneChanging.chai  test.chai  test2.chai
Client/System/: CMakeLists.txt  InputSystem.cpp  KeyboardEventSystem.cpp  MouseEventSystem.cpp  blinkSystem.cpp  clocksSystem.cpp  drawSystem.cpp  execSystem.cpp  gameSystem.cpp  serverSystem.cpp  system.hpp
Client/System/Button/: CMakeLists.txt  button.cpp  button.hpp
Client/System/Controllable/: CMakeLists.txt  move.cpp  move.hpp
Client/System/Executor/: CMakeLists.txt  exec.cpp  exec.hpp
Client/System/GameEntity/: CMakeLists.txt  gameEntity.cpp  gameEntity.hpp
Client/Utils/: CMakeLists.txt  utils.cpp  utils.hpp
Client/cmake/: Findsfml.cmake
Server/: .clang-tidy  .gitignore
Server/ServerSide/: Accounts.txt  CMakeLists.txt  User.hpp  main.cpp
Server/ServerSide/AEngine/: ASocket.cpp  ASocket.hpp  CMakeLists.txt
Server/ServerSide/Game/: CMakeLists.txt  Game.cpp  Game.hpp
Server/ServerSide/Game/Component/: CMakeLists.txt  ClocksComponent.hpp  CollideComponent.hpp  DataComponent.hpp  ExecComponent.hpp  LifeComponent.hpp  MountedComponent.hpp  OwnerComponent.hpp  SceneManager.hpp  ServerUser.hpp  TransformComponent.hpp  VelocityComponent.hpp  utils.hpp
Server/ServerSide/Game/ECS/: Entity.hpp  Registry.hpp  Sparse.hpp
Server/ServerSide/Game/System/: CMakeLists.txt  clocksSystem.cpp  execSystem.cpp  gameSystem.cpp  progressSystem.cpp  system.hpp
Server/ServerSide/Game/System/Controllable/: CMakeLists.txt  move.cpp  move.hpp
Server/ServerSide/Game/System/Executor/: CMakeLists.txt  exec.cpp  exec.hpp
Server/ServerSide/Game/System/GameEntity/: CMakeLists.txt  gameEntity.cpp  gameEntity.hpp
Server/ServerSide/Lobby/: CMakeLists.txt  Lobby.cpp  Lobby.hpp
Server/ServerSide/Protocol/: ProtocolBuilder.hpp  ProtocolParser.hpp
Server/ServerSide/SFMLEngine/: CMakeLists.txt  SFMLIpAddress.cpp  SFMLIpAddress.hpp  SFMLSocket.cpp  SFMLSocket.hpp
Server/ServerSide/Server/: CMakeLists.txt  Server.cpp  Server.hpp
Server/ServerSide/Utils/: CMakeLists.txt  utils.cpp  utils.hpp
documentation/: R-type Protocol.xlsx
documentation/html/: annotated.html  classes.html  dir_0891fc6475739fcccb4f1ba4be7d6935.html  dir_12163cb4d44b405226e0bac0a5dc4a03.html  dir_19c461808a8791a9e179c698651c298f.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_20b61acfa2816dafc44190a9cbff302f.html  dir_234f9ae662838635edf13b113313082a.html  dir_253c743ff06c58c233595e3f193f9b0b.html  dir_2ba9596dbda4ab5d04ee50a318e48364.html  dir_305dd629abd4a54f3910d4881d36e0bd.html  dir_3952df362321ba22b675bc13ea10fe5a.html  dir_3e45c62483f63064ffc934d53bbb47ad.html  dir_414c5c8d1d60c4e56b5c3964e412ce5f.html  dir_4820c3e17e5e6d867d69c80047cb6863.html  dir_4e0e07400dfbe1e57f526f1fc4277069.html  dir_4fd882a92fe6a39fc5785d4ec4518783.html  dir_4fea6a64185bbf42617153961671257a.html  dir_580e34130195cf057fe5f8ce45086773.html  dir_58df5c0eb375d12787a01044cdfac0c5.html  dir_5d407ed250aee98cc1f9761cab842527.html  dir_65c413b12ae827861a59614fa4d0d003.html  dir_68a958b2e56e1e91671ceb666cf5507e.html  dir_69c397d5bf62f4049bf737c650ceb102.html  dir_6a6470032a1b1ccf33daf45dda017130.html  dir_6a777cbd9b4650b98042b52672de3ecb.html  dir_6dea81af7373f384041d4859209e7f40.html  dir_748ff7583418e097a25cf01b0b8c9c1e.html  dir_7cb5be5ee26b1a334891d4e8615b3eb1.html  dir_8ba2092a62eb1bf3b4da484c8ee59b6c.html  dir_8dfa61091df87e2b94ceb87b4ef8cd68.html  dir_922c588100a187620fdc1533bc178f73.html  dir_9267fa702a14daf734f4f8849fdb2572.html  dir_956c02db2d90dd4a346e25999a356119.html  dir_971e2b252e75b3da656c31a55ad03055.html  dir_9db9af5161d1125704c68f5eaced415a.html  dir_9e567fe9ec7782530208b231ac1fdbc8.html  dir_9ec482296036af0b951663a36b7e3578.html  dir_a390fdf2ec0c47114fcda0cf547c989d.html  dir_a666851f3bce4729201c340557b921e6.html  (+79 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  (+85 more)
documentation/latex/: annotated.tex  files.tex  hierarchy.tex  index.tex  namespaces.tex  refman.tex
(+1676 files in other folders)
